--- a/sass/_home-headshot.scss
+++ b/sass/_home-headshot.scss
@@ -81,7 +81,7 @@
         text-transform: uppercase;
       }
       h1 {
-        font-size: clamp(2.5rem, 8vw, 8rem);
+        font-size: clamp(2.5rem, 10vw, 6rem);
         font-weight: 700;
         letter-spacing: -1px;
       }
@@ -99,7 +99,7 @@
     }
 
     .scroll-down {
-      font-size: clamp(1.2rem, 3vw, 1.5rem);
+      font-size: clamp(1.125rem, 2vw, 1.5rem);
       position: absolute;
       bottom: 2rem;
       transform: translate(0%, 50%);
@@ -137,7 +137,7 @@
     h1 {
       font-weight: 700;
       text-transform: uppercase;
-      font-size: clamp(2.5rem, 8vw, 8rem);
+      font-size: clamp(2.5rem, 10vw, 6rem);
       letter-spacing: -1px;
     }
     h4 {
@@ -164,7 +164,7 @@
       line-height: 1;
       text-shadow: 2px 2px 4px #5e5e5e;
       font-weight: 700;
-      font-size: clamp(2.5rem, 8vw, 8rem);
+      font-size: clamp(2.3rem, 10vw, 6rem);
       letter-spacing: -1px;
       span {
         color: inherit;
@@ -200,7 +200,7 @@
 
     h2 {
       font-weight: 700;
-      font-size: clamp(2.5rem, 8vw, 8rem);
+      font-size: clamp(2.3rem, 10vw, 6rem);
       letter-spacing: -1px;
       text-transform: uppercase;
     }
@@ -236,17 +236,18 @@
     }
     h2,
     h4 {
-      line-height: 1;
       text-shadow: 2px 2px 4px #5e5e5e;
     }
     h2 {
       letter-spacing: -3px;
-      font-size: clamp(2.5rem, 8vw, 8rem);
+      font-size: clamp(2.5rem, 10vw, 5rem);
       font-weight: 700;
       text-transform: capitalize;
       font-style: italic;
+      line-height: 1;
     }
     h4 {
+      line-height: 1.5;
       letter-spacing: 6px;
       font-size: clamp(1rem, 3vw, 2.5rem);
     }
@@ -266,8 +267,9 @@
     }
     h1 {
       font-weight: 700;
-      font-size: clamp(2.5rem, 8vw, 8rem);
+      font-size: clamp(2.5rem, 10vw, 6rem);
       letter-spacing: -1px;
+      // white-space: nowrap;
     }
 
     h3 {
