--- a/sass/_home-reel.scss
+++ b/sass/_home-reel.scss
@@ -22,11 +22,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    row-gap: 2rem;
+    // row-gap: 2rem;
     width: 100%;
     // border: 3px solid yellow;
     margin: auto;
-    // height: 100%;
+    height: 100%;
     overflow: hidden;
 
     .reel-title {
@@ -36,7 +36,6 @@
       justify-content: center;
       // border: 3px solid brown;
       padding: 3rem 0 0;
-
       //ANIMATION
       -webkit-animation: fadeinsmall 1s ease; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadeinsmall 1s ease; /* Firefox < 16 */
@@ -58,7 +57,7 @@
     .homepage-reel {
       min-height: 200px;
       width: 100%;
-      margin: auto;
+      margin: 2rem auto;
       max-width: 1400px;
       padding: 0rem 6rem;
       // border: 3px solid purple;
