--- a/sass/_home-resume.scss
+++ b/sass/_home-resume.scss
@@ -1,4 +1,5 @@
 .resume-container {
+  display: flex;
   min-height: 400px;
   position: relative;
   top: 5rem;
@@ -15,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  row-gap: 2rem;
+  // row-gap: 2rem;
   background-color: rgba(0, 0, 0, 0.3);
   // border: 3px solid yellow;
   height: 100%;
@@ -42,16 +43,16 @@
   }
 
   .resume-border {
+    position: relative;
     // border: 3px solid green;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0 6rem;
-    // margin: auto;
+    margin: 2rem auto;
     min-height: 200px;
-
     width: 100%;
-    // height: 100%;
+    height: 100%;
     //ANIMATION
     -webkit-animation: fadeinlarge 1.3s ease; /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadeinlarge 1.3s ease; /* Firefox < 16 */
